# moneyexchange-api

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  test_api.py  urls.py  views.py
api/migrations/: 0001_initial.py
moneyexchange_project/: asgi.py  settings.py  urls.py  wsgi.py
